tests/integration/snapshots/integration__conformance__n_string_escape_x.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["\x00"]
stdout ---

stderr ---
error: expected escapable sequence, found `x`.
       valid escapes are `\"`, `\\`, `\/`, `\b`, `\f`, `\n`, `\r`, `\t` or `\uXXXX` (4 hex digits)
 --> stdin:1:4
  |
1 | ["\x00"]
  |  --^
  |  ||
  |  |escape slash found here
  |  opening quote found here
  |
help: remove unnecessary escape slash
  |
1 - ["\x00"]
1 + ["x00"]
  |
