tests/integration/snapshots/integration__conformance__n_string_escaped_backslash_bad.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
["\\\"]
stderr ---
error: expected closing quote
 --> stdin:1:7
  |
1 | ["\\\"]
  |  -    ^
  |  |
  |  opening quote found here
  |
help: insert the missing closing quote
  |
1 | ["\\\"]"
  |        +
