tests/integration/snapshots/integration__conformance__n_string_escaped_ctrl_char_tab.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["\	"]
stdout ---

stderr ---
error: expected escapable sequence, found `\t`.
       valid escapes are `\"`, `\\`, `\/`, `\b`, `\f`, `\n`, `\r`, `\t` or `\uXXXX` (4 hex digits)
 --> stdin:1:4
  |
1 | ["\    "]
  |  --^^^^
  |  ||
  |  |escape slash found here
  |  opening quote found here
  |
help: escape the control character
  |
1 | ["\t"]
  |   ~~
